fix: Increase the max width of active logo to prevent it from getting cut off

--- a/app/styles/Header.module.scss
+++ b/app/styles/Header.module.scss
@@ -80,7 +80,7 @@
     transition: max-width 0.25s ease-in-out;
   }
   &.logoActive:after {
-    max-width: 6rem;
+    max-width: 7rem;
   }
 }
 
